fixed css showcase to make everything align in the car display. Added lowToHigh & highToLow functions to sort the car display

--- a/src/styles/components/searchCarInventory/_showcase.scss
+++ b/src/styles/components/searchCarInventory/_showcase.scss
@@ -10,6 +10,10 @@
     font-size: 1.6rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
+    width: 100%;
+  }
+  &-imgContain{
+    width: 100%;
   }
   &-img{
     width: 100%;
@@ -17,6 +21,7 @@
   &-flexTwo{
     display:flex;
     flex-direction:column;
+    width: 100%;
   }
   &-desc{
     font-size: 1.4rem;
